--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
   <div class="container">
     <h1 class="title">Drum Kit</h1>
     <div class="set">
-      <button class="drum" data-key="87"></button>
-      <button class="drum" data-key="65"></button>
-      <button class="drum" data-key="83"></button>
-      <button class="drum" data-key="68"></button>
-      <button class="drum" data-key="74"></button>
-      <button class="drum" data-key="75"></button>
-      <button class="drum" data-key="76"></button>
+      <button class="drum" data-key="87">W</button> <!-- Button for 'W' key -->
+      <button class="drum" data-key="65">A</button> <!-- Button for 'A' key -->
+      <button class="drum" data-key="83">S</button> <!-- Button for 'S' key -->
+      <button class="drum" data-key="68">D</button> <!-- Button for 'D' key -->
+      <button class="drum" data-key="74">J</button> <!-- Button for 'J' key -->
+      <button class="drum" data-key="75">K</button> <!-- Button for 'K' key -->
+      <button class="drum" data-key="76">L</button> <!-- Button for 'L' key -->
     </div>
   </div>
 
   <footer>
-    Made with ❤️ by Qobiljon Xayrullayev <br>
+    Made with JS by Qobiljon Xayrullayev <br>
   </footer>
 
   <audio data-key="87" src="sounds/crash.mp3"></audio>
@@ -35,7 +35,7 @@
   <audio data-key="75" src="sounds/tom-3.mp3"></audio>
   <audio data-key="76" src="sounds/tom-4.mp3"></audio>
 
-  <script src="scripts.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
