listening keyboard actions

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <div class="container">
     <h1 class="title">Drum Kit</h1>
     <div class="set">
-      <button class="drum" data-key="87">W</button>
-      <button class="drum" data-key="65">A</button> 
-      <button class="drum" data-key="83">S</button> 
-      <button class="drum" data-key="68">D</button> 
-      <button class="drum" data-key="74">J</button> 
-      <button class="drum" data-key="75">K</button> 
-      <button class="drum" data-key="76">L</button> 
+      <button class="drum W" data-key="87">W</button>
+      <button class="drum A" data-key="65">A</button> 
+      <button class="drum S" data-key="83">S</button> 
+      <button class="drum D" data-key="68">D</button> 
+      <button class="drum L" data-key="74">L</button> 
+      <button class="drum K" data-key="75">K</button> 
+      <button class="drum J" data-key="76">J</button> 
     </div>
   </div>
 
